feat:集成自动发布服务